fix(header): remove extra space below navbar links

--- a/components/sections/header/nav/style.module.scss
+++ b/components/sections/header/nav/style.module.scss
@@ -5,7 +5,7 @@
     position: relative;
     display: flex;
     gap: 50px;
-    margin-bottom: 80px;
+    margin-bottom: 8px; // prev 80px
   }
 
   .container {
